Capitalize Latin that begins endnotes

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -1150,7 +1150,7 @@
 					<p>The chryselephantine statue of Zeus by Pheidias; see <a href="book-4.xhtml#book-4-57">Caligula, 57.1</a>. <a href="book-4.xhtml#noteref-380" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-381" epub:type="endnote">
-					<p><i xml:lang="la">numidicae</i> and <i xml:lang="la">meleagrides</i> are the same. <a href="book-4.xhtml#noteref-381" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="la">Numidicae</i> and <i xml:lang="la">meleagrides</i> are the same. <a href="book-4.xhtml#noteref-381" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-382" epub:type="endnote">
 					<p><i epub:type="se:name.publication.book">Iliad</i>, 23.724, where after a long and indecisive wrestling bout Ajax thus challenges Odysseus to settle the contest. <span xml:lang="grc">Ἀνάειρε</span> is doubtless used in a double sense, perhaps with aposiopesis, “Raise me up (to heaven), or thee I’ll⁠—.” <a href="book-4.xhtml#noteref-382" epub:type="backlink">↩</a></p>
@@ -1204,10 +1204,10 @@
 					<p>For punishment, or to fight in the arena. <a href="book-4.xhtml#noteref-398" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-399" epub:type="endnote">
-					<p><i xml:lang="la">retiarii</i>: net-fighters who were lightly armed and fought with uncovered heads. They carried a net, in which they tried to entangle their opponents, and a trident and dagger, with which they slew them, if successful. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist Translation <abbr>p.</abbr> 446, <abbr>ftn.</abbr> b) <span epub:type="z3998:roman">IV</span>, 171 <abbr class="eoc">ff.</abbr> <a href="book-4.xhtml#noteref-399" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="la">Retiarii</i>: net-fighters who were lightly armed and fought with uncovered heads. They carried a net, in which they tried to entangle their opponents, and a trident and dagger, with which they slew them, if successful. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist Translation <abbr>p.</abbr> 446, <abbr>ftn.</abbr> b) <span epub:type="z3998:roman">IV</span>, 171 <abbr class="eoc">ff.</abbr> <a href="book-4.xhtml#noteref-399" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-400" epub:type="endnote">
-					<p><i xml:lang="la">secutores</i>: the usual opponents of the <i xml:lang="la">retiarii</i>. They were armed with a sword, a shield, a greave and a visored helmet. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist Translation <abbr>p.</abbr> 446, <abbr>ftn.</abbr> <i>b</i>) <span epub:type="z3998:roman">IV</span>, 171 <abbr class="eoc">ff.</abbr> <a href="book-4.xhtml#noteref-400" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="la">Secutores</i>: the usual opponents of the <i xml:lang="la">retiarii</i>. They were armed with a sword, a shield, a greave and a visored helmet. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist Translation <abbr>p.</abbr> 446, <abbr>ftn.</abbr> <i>b</i>) <span epub:type="z3998:roman">IV</span>, 171 <abbr class="eoc">ff.</abbr> <a href="book-4.xhtml#noteref-400" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-401" epub:type="endnote">
 					<p>See <a href="book-2.xhtml#book-2-23">Augustus, 23.1</a>. <a href="book-4.xhtml#noteref-401" epub:type="backlink">↩</a></p>
@@ -1456,7 +1456,7 @@
 					<p>That is, the prefects of the treasury, chosen from the praetors and ex-praetors (see <a href="book-2.xhtml#book-2-36">Augustus, 36</a>). Claudius later restored the charge of the treasury to the quaestors (see <a href="book-5.xhtml#book-5-24-2">Claudius, 24.2</a>). <a href="book-5.xhtml#noteref-482" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-483" epub:type="endnote">
-					<p><i xml:lang="la">in vacuum</i>; the meaning in uncertain. It perhaps means that the advertisement was merely a matter of form, though none the less humiliating. <a href="book-5.xhtml#noteref-483" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="la">In vacuum</i>; the meaning in uncertain. It perhaps means that the advertisement was merely a matter of form, though none the less humiliating. <a href="book-5.xhtml#noteref-483" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-484" epub:type="endnote">
 					<p>“Hope” of becoming emperor; “confidence” that he had escaped death. <a href="book-5.xhtml#noteref-484" epub:type="backlink">↩</a></p>
