[Editorial] divers -> diverse

--- a/src/epub/text/book-3.xhtml
+++ b/src/epub/text/book-3.xhtml
@@ -202,7 +202,7 @@
 				</li>
 				<li id="book-3-37">
 					<p>
-						<span>He gave special attention to securing safety from prowling brigands and lawless outbreaks. He stationed garrisons of soldiers nearer together than before throughout Italy, while at Rome he established a camp for the barracks of the praetorian cohorts, which before that time had been quartered in isolated groups in divers lodging houses.</span>
+						<span>He gave special attention to securing safety from prowling brigands and lawless outbreaks. He stationed garrisons of soldiers nearer together than before throughout Italy, while at Rome he established a camp for the barracks of the praetorian cohorts, which before that time had been quartered in isolated groups in diverse lodging houses.</span>
 					</p>
 					<p>
 						<span>He took great pains to prevent outbreaks of the populace and punished such as occurred with the utmost severity. When a quarrel in the theatre ended in bloodshed, he banished the leaders of the factions,<a href="endnotes.xhtml#note-300" id="noteref-300" epub:type="noteref">300</a> as well as the actors who were the cause of the dissension; and no entreaties of the people could ever induce him to recall them.</span>
