Add Roman numeral semantics

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -1612,7 +1612,7 @@
 					<p>A common military prize. <a href="book-5.xhtml#noteref-534" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-535" epub:type="endnote">
-					<p>Only two of these are known, both named Drusilla. One was the daughter of Juba <span epub:type="z3998:roman">II</span>, king of Mauretania, and the other of Herod Agrippa I, of Judaea; the latter was previously married to Azizus, king of Emesa. <a href="book-5.xhtml#noteref-535" epub:type="backlink">↩</a></p>
+					<p>Only two of these are known, both named Drusilla. One was the daughter of Juba <span epub:type="z3998:roman">II</span>, king of Mauretania, and the other of Herod Agrippa <span epub:type="z3998:roman">I</span>, of Judaea; the latter was previously married to Azizus, king of Emesa. <a href="book-5.xhtml#noteref-535" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-536" epub:type="endnote">
 					<p>Otherwise restricted to knights. <a href="book-5.xhtml#noteref-536" epub:type="backlink">↩</a></p>
