Fix typo: Englist → English

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -475,7 +475,7 @@
 					<p>The form of purchase consisted in thrice touching a balance (<i xml:lang="la">libra</i>) with a penny (<i xml:lang="la">as</i>), in the presence of the praetor. <a href="book-2.xhtml#noteref-155" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-156" epub:type="endnote">
-					<p>A record of the events of the imperial household. The custom of keeping such a daybook apparently dated from the time of Augustus. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist Translation), <span epub:type="z3998:roman">IV</span>, 56. <a href="book-2.xhtml#noteref-156" epub:type="backlink">↩</a></p>
+					<p>A record of the events of the imperial household. The custom of keeping such a daybook apparently dated from the time of Augustus. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (English Translation), <span epub:type="z3998:roman">IV</span>, 56. <a href="book-2.xhtml#noteref-156" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-157" epub:type="endnote">
 					<p>The host usually occupied the <i xml:lang="la">summus locus</i> on the <i xml:lang="la">imus lectus</i>. <a href="book-2.xhtml#noteref-157" epub:type="backlink">↩</a></p>
@@ -550,7 +550,7 @@
 					<p>Opposed to <i xml:lang="la">vestis forensis</i> or <i xml:lang="la">forensia</i> (<i xml:lang="la">vestimenta</i>); <abbr>cf.</abbr> <a href="book-7.xhtml#book-7-3-8">Vitellius, 8.1</a>. <a href="book-2.xhtml#noteref-180" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-181" epub:type="endnote">
-					<p>The <i xml:lang="la">cena recta</i> was a regular dinner, at which the guests reclined on couches at a table, contrasted with <i xml:lang="la">sportula</i>, an informal meal (<a href="book-5.xhtml#book-5-21-4">Claudius, 21.4</a>) or a distribution of food. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist translation), <span epub:type="z3998:roman">IV</span> <abbr>pp.</abbr> 77 <abbr class="eoc">ff.</abbr> <a href="book-2.xhtml#noteref-181" epub:type="backlink">↩</a></p>
+					<p>The <i xml:lang="la">cena recta</i> was a regular dinner, at which the guests reclined on couches at a table, contrasted with <i xml:lang="la">sportula</i>, an informal meal (<a href="book-5.xhtml#book-5-21-4">Claudius, 21.4</a>) or a distribution of food. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (English translation), <span epub:type="z3998:roman">IV</span> <abbr>pp.</abbr> 77 <abbr class="eoc">ff.</abbr> <a href="book-2.xhtml#noteref-181" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-182" epub:type="endnote">
 					<p>See <a href="book-2.xhtml#book-2-72-2">Augustus, 72.2</a>. <a href="book-2.xhtml#noteref-182" epub:type="backlink">↩</a></p>
@@ -1204,10 +1204,10 @@
 					<p>For punishment, or to fight in the arena. <a href="book-4.xhtml#noteref-398" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-399" epub:type="endnote">
-					<p><i xml:lang="la">Retiarii</i>: net-fighters who were lightly armed and fought with uncovered heads. They carried a net, in which they tried to entangle their opponents, and a trident and dagger, with which they slew them, if successful. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist Translation <abbr>p.</abbr> 446, <abbr>ftn.</abbr> b) <span epub:type="z3998:roman">IV</span>, 171 <abbr class="eoc">ff.</abbr> <a href="book-4.xhtml#noteref-399" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="la">Retiarii</i>: net-fighters who were lightly armed and fought with uncovered heads. They carried a net, in which they tried to entangle their opponents, and a trident and dagger, with which they slew them, if successful. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (English Translation <abbr>p.</abbr> 446, <abbr>ftn.</abbr> b) <span epub:type="z3998:roman">IV</span>, 171 <abbr class="eoc">ff.</abbr> <a href="book-4.xhtml#noteref-399" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-400" epub:type="endnote">
-					<p><i xml:lang="la">Secutores</i>: the usual opponents of the <i xml:lang="la">retiarii</i>. They were armed with a sword, a shield, a greave and a visored helmet. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist Translation <abbr>p.</abbr> 446, <abbr>ftn.</abbr> <i>b</i>) <span epub:type="z3998:roman">IV</span>, 171 <abbr class="eoc">ff.</abbr> <a href="book-4.xhtml#noteref-400" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="la">Secutores</i>: the usual opponents of the <i xml:lang="la">retiarii</i>. They were armed with a sword, a shield, a greave and a visored helmet. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (English Translation <abbr>p.</abbr> 446, <abbr>ftn.</abbr> <i>b</i>) <span epub:type="z3998:roman">IV</span>, 171 <abbr class="eoc">ff.</abbr> <a href="book-4.xhtml#noteref-400" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-401" epub:type="endnote">
 					<p>See <a href="book-2.xhtml#book-2-23">Augustus, 23.1</a>. <a href="book-4.xhtml#noteref-401" epub:type="backlink">↩</a></p>
