--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -403,7 +403,7 @@
 					<p>That is, even by <i xml:lang="la">iusta libertas</i>, which conferred citizenship. Slaves who had been punished for crimes (<i xml:lang="la">facinora</i>) or disgraceful acts (<i xml:lang="la">flagitia</i>) became on manumission <i xml:lang="la">dediticii</i>, “prisoners of war.” <a href="book-2.xhtml#noteref-131" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-132" epub:type="endnote">
-					<p>Virgil <i epub:type="se:name.publication.book">Aeneid</i> 1.282. <a href="book-2.xhtml#noteref-132" epub:type="backlink">↩</a></p>
+					<p>Virgil <i epub:type="se:name.publication.poem">Aeneid</i> 1.282. <a href="book-2.xhtml#noteref-132" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-133" epub:type="endnote">
 					<p><i xml:lang="la">Congiarium</i>, strictly a distribution of oil (from <i xml:lang="la">congius</i>, a liquid measure) came to be used of any largess. <a href="book-2.xhtml#noteref-133" epub:type="backlink">↩</a></p>
@@ -490,7 +490,7 @@
 					<p>Planasia. <a href="book-2.xhtml#noteref-160" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-161" epub:type="endnote">
-					<p><i epub:type="se:name.publication.book">Iliad</i> 3.40, where the line is addressed by Hector to Paris, with the verbs in the second person. <a href="book-2.xhtml#noteref-161" epub:type="backlink">↩</a></p>
+					<p><i epub:type="se:name.publication.poem">Iliad</i> 3.40, where the line is addressed by Hector to Paris, with the verbs in the second person. <a href="book-2.xhtml#noteref-161" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-162" epub:type="endnote">
 					<p>See <a href="book-2.xhtml#book-2-47">Augustus, 47</a>, at the beginning. <a href="book-2.xhtml#noteref-162" epub:type="backlink">↩</a></p>
@@ -832,7 +832,7 @@
 					<p>Literally, “by the god of Truth;” Fidius was one of the surnames of Jupiter. <a href="book-3.xhtml#noteref-274" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-275" epub:type="endnote">
-					<p><i epub:type="se:name.publication.book">Iliad</i>, 10.246 f. <a href="book-3.xhtml#noteref-275" epub:type="backlink">↩</a></p>
+					<p><i epub:type="se:name.publication.poem">Iliad</i>, 10.246 f. <a href="book-3.xhtml#noteref-275" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-276" epub:type="endnote">
 					<p>A Greek proverb; <abbr>cf.</abbr> Terence <i epub:type="se:name.publication.book">Phormio</i> 506 and Donatus, <i xml:lang="la"><abbr>ad.</abbr> <abbr class="eoc">loc.</abbr></i> <a href="book-3.xhtml#noteref-276" epub:type="backlink">↩</a></p>
@@ -928,7 +928,7 @@
 					<p>Biberius Caldius Mero: A name coined in jest after Tiberius Claudius Nero, from <i xml:lang="la">bibo</i>, drink, <i xml:lang="la">cal(i)dus</i>, hot, and <i xml:lang="la">merum</i>, unmixed wine. <a href="book-3.xhtml#noteref-306" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-307" epub:type="endnote">
-					<p>Probably the emperor took a sip from the huge vessel and passed it to the man, who drained it to the dregs; <abbr>cf.</abbr> Virgil <i epub:type="se:name.publication.book">Aeneid</i> 1.738. Since the amphora as a measure contained about seven gallons, the word is here probably used of a large tankard of that shape. <a href="book-3.xhtml#noteref-307" epub:type="backlink">↩</a></p>
+					<p>Probably the emperor took a sip from the huge vessel and passed it to the man, who drained it to the dregs; <abbr>cf.</abbr> Virgil <i epub:type="se:name.publication.poem">Aeneid</i> 1.738. Since the amphora as a measure contained about seven gallons, the word is here probably used of a large tankard of that shape. <a href="book-3.xhtml#noteref-307" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-308" epub:type="endnote">
 					<p>See <a href="book-3.xhtml#book-3-56">Tiberius, 56</a>. <a href="book-3.xhtml#noteref-308" epub:type="backlink">↩</a></p>
@@ -1141,7 +1141,7 @@
 					<p><abbr>Cf.</abbr> <a href="book-1.xhtml#book-1-44-3">Julius, 44.3</a>. <a href="book-4.xhtml#noteref-377" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-378" epub:type="endnote">
-					<p><i epub:type="se:name.publication.book">Iliad</i> 2.204. <a href="book-4.xhtml#noteref-378" epub:type="backlink">↩</a></p>
+					<p><i epub:type="se:name.publication.poem">Iliad</i> 2.204. <a href="book-4.xhtml#noteref-378" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-379" epub:type="endnote">
 					<p>Under Caligula the so-called “principate” had become an absolute monarchy. Caligula proposed to assume the pomp of a king. <a href="book-4.xhtml#noteref-379" epub:type="backlink">↩</a></p>
@@ -1153,7 +1153,7 @@
 					<p><i xml:lang="la">Numidicae</i> and <i xml:lang="la">meleagrides</i> are the same. <a href="book-4.xhtml#noteref-381" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-382" epub:type="endnote">
-					<p><i epub:type="se:name.publication.book">Iliad</i>, 23.724, where after a long and indecisive wrestling bout Ajax thus challenges Odysseus to settle the contest. <span xml:lang="grc">Ἀνάειρε</span> is doubtless used in a double sense, perhaps with aposiopesis, “Raise me up (to heaven), or thee I’ll⁠—.” <a href="book-4.xhtml#noteref-382" epub:type="backlink">↩</a></p>
+					<p><i epub:type="se:name.publication.poem">Iliad</i>, 23.724, where after a long and indecisive wrestling bout Ajax thus challenges Odysseus to settle the contest. <span xml:lang="grc">Ἀνάειρε</span> is doubtless used in a double sense, perhaps with aposiopesis, “Raise me up (to heaven), or thee I’ll⁠—.” <a href="book-4.xhtml#noteref-382" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-383" epub:type="endnote">
 					<p>See <a href="book-2.xhtml#book-2-16">Augustus, 16.1</a>. <a href="book-4.xhtml#noteref-383" epub:type="backlink">↩</a></p>
@@ -1276,7 +1276,7 @@
 					<p>From <i xml:lang="la">exploratores</i>, scouts or rangers. <a href="book-4.xhtml#noteref-422" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-423" epub:type="endnote">
-					<p><i epub:type="se:name.publication.book">Aeneid</i> 1.207. <a href="book-4.xhtml#noteref-423" epub:type="backlink">↩</a></p>
+					<p><i epub:type="se:name.publication.poem">Aeneid</i> 1.207. <a href="book-4.xhtml#noteref-423" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-424" epub:type="endnote">
 					<p>One of the various kinds of “torsion-engines” (<i xml:lang="la">tormenta</i>) used by the Romans. The <i xml:lang="la">ballista</i> cast stones, the <i xml:lang="la">catapulta</i> large arrows or darts. <a href="book-4.xhtml#noteref-424" epub:type="backlink">↩</a></p>
@@ -1354,7 +1354,7 @@
 					<p>See <a href="book-4.xhtml#book-4-22-3">Caligula, 22.3</a>. <a href="book-4.xhtml#noteref-448" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-449" epub:type="endnote">
-					<p>It was called Cinyras, and its story is told by Ovid, <i epub:type="se:name.publication.book">Metamorphoses</i> 10.298 <abbr class="eoc">ff.</abbr> <a href="book-4.xhtml#noteref-449" epub:type="backlink">↩</a></p>
+					<p>It was called Cinyras, and its story is told by Ovid, <i epub:type="se:name.publication.poem">Metamorphoses</i> 10.298 <abbr class="eoc">ff.</abbr> <a href="book-4.xhtml#noteref-449" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-450" epub:type="endnote">
 					<p>Its name was derived from a famous highwayman; <abbr>cf.</abbr> Juvenal 8.186. <a href="book-4.xhtml#noteref-450" epub:type="backlink">↩</a></p>
@@ -1693,7 +1693,7 @@
 					<p>Referring to the cohort on guard at the Palace; <abbr>cf.</abbr> <a href="book-5.xhtml#book-5-10">Claudius, 10</a>. <a href="book-5.xhtml#noteref-561" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-562" epub:type="endnote">
-					<p><i epub:type="se:name.publication.book">Iliad</i>, 24.369; <i epub:type="se:name.publication.book">Odyssey</i> 21.133. <a href="book-5.xhtml#noteref-562" epub:type="backlink">↩</a></p>
+					<p><i epub:type="se:name.publication.poem">Iliad</i>, 24.369; <i epub:type="se:name.publication.poem">Odyssey</i> 21.133. <a href="book-5.xhtml#noteref-562" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-563" epub:type="endnote">
 					<p>A proverbial expression, derived from the story of Telephus, who when wounded by Achilles was told by the oracle that he could be cured only by the one who dealt the blow. Achilles cured him by applying rust from his spear to the wound. <a href="book-5.xhtml#noteref-563" epub:type="backlink">↩</a></p>
@@ -2134,7 +2134,7 @@
 					<p>Pliny <i epub:type="se:name.publication.book">Natural History</i> 37.29, tells us that the cups were of crystal. <a href="book-6.xhtml#noteref-708" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-709" epub:type="endnote">
-					<p>Virgil <i epub:type="se:name.publication.book">Aeneid</i> 12.646. <a href="book-6.xhtml#noteref-709" epub:type="backlink">↩</a></p>
+					<p>Virgil <i epub:type="se:name.publication.poem">Aeneid</i> 12.646. <a href="book-6.xhtml#noteref-709" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-710" epub:type="endnote">
 					<p>In the Palace. <a href="book-6.xhtml#noteref-710" epub:type="backlink">↩</a></p>
@@ -2161,7 +2161,7 @@
 					<p>Two pieces of wood, fastened together in the form of a V. <a href="book-6.xhtml#noteref-717" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-718" epub:type="endnote">
-					<p><i epub:type="se:name.publication.book">Iliad</i>, 10.535. <a href="book-6.xhtml#noteref-718" epub:type="backlink">↩</a></p>
+					<p><i epub:type="se:name.publication.poem">Iliad</i>, 10.535. <a href="book-6.xhtml#noteref-718" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-719" epub:type="endnote">
 					<p>See <a href="book-8.xhtml#book-8-3-14-4">Domitian, 14.4</a>. <a href="book-6.xhtml#noteref-719" epub:type="backlink">↩</a></p>
@@ -2182,7 +2182,7 @@
 					<p>See note on <a href="book-2.xhtml#book-2-97">Augustus, 97.1</a>. Here <i xml:lang="la">lustrum</i> is applied to the five-year period of the Olympic games. <a href="book-6.xhtml#noteref-724" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-725" epub:type="endnote">
-					<p>Atargatis, the principal deity of Northern Syria, identified with Magna Mater and Caelestis; often mentioned in inscriptions and called by Apul. <i epub:type="se:name.publication.book">Metamorphoses</i> 8.25, <i xml:lang="la">omnipotens et omniparens</i>. <a href="book-6.xhtml#noteref-725" epub:type="backlink">↩</a></p>
+					<p>Atargatis, the principal deity of Northern Syria, identified with Magna Mater and Caelestis; often mentioned in inscriptions and called by Apul. <i epub:type="se:name.publication.poem">Metamorphoses</i> 8.25, <i xml:lang="la">omnipotens et omniparens</i>. <a href="book-6.xhtml#noteref-725" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-726" epub:type="endnote">
 					<p>See note on <a href="book-3.xhtml#book-3-4-2">Tiberius, 4.2</a>. <a href="book-6.xhtml#noteref-726" epub:type="backlink">↩</a></p>
@@ -2347,7 +2347,7 @@
 					<p>In the Forum; see <a href="book-2.xhtml#book-2-57">Augustus, 57.1</a>. <i xml:lang="la">Curti lacus:</i> A marsh in the Roman Forum, the site of which was afterwards enclosed by a wall and has recently been unearthed. Various stories are told of its origin. <a href="book-7.xhtml#noteref-779" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-780" epub:type="endnote">
-					<p><i epub:type="se:name.publication.book">Iliad</i>, 5.254; <i epub:type="se:name.publication.book">Odyssey</i> 21.426. <a href="book-7.xhtml#noteref-780" epub:type="backlink">↩</a></p>
+					<p><i epub:type="se:name.publication.poem">Iliad</i>, 5.254; <i epub:type="se:name.publication.poem">Odyssey</i> 21.426. <a href="book-7.xhtml#noteref-780" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-781" epub:type="endnote">
 					<p>The meaning of this passage is uncertain and the interpretations various; see the long note in the <abbr>ed.</abbr> of Baumgarten-Crusius. The meaning of <i xml:lang="la">super manus</i> is particularly dark; the most plausible suggestion is that it is equivalent to <i xml:lang="la">ante se</i>. <a href="book-7.xhtml#noteref-781" epub:type="backlink">↩</a></p>
@@ -2623,7 +2623,7 @@
 					<p><i xml:lang="la">Plaustra</i> was the urban form of the word for “wagons,” but there was also a plebeian form <i xml:lang="la">plostra</i>; see Horace, <i epub:type="se:name.publication.book">Horatii Flacci Sermonum</i> 1.6.42 and <abbr>cf.</abbr> <i xml:lang="la">Claudius</i>, <i xml:lang="la">Clodius</i>. The original form was <i xml:lang="la">plostra</i>. <a href="book-8.xhtml#noteref-871" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-872" epub:type="endnote">
-					<p><i epub:type="se:name.publication.book">Iliad</i> 7.213. <a href="book-8.xhtml#noteref-872" epub:type="backlink">↩</a></p>
+					<p><i epub:type="se:name.publication.poem">Iliad</i> 7.213. <a href="book-8.xhtml#noteref-872" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-873" epub:type="endnote">
 					<p>Menander, <abbr>Fr.</abbr> 223.2, Koch. <a href="book-8.xhtml#noteref-873" epub:type="backlink">↩</a></p>
@@ -2890,7 +2890,7 @@
 					<p>This in its connection suggests the blush of modesty, but <abbr>cf.</abbr> Tacitus <i epub:type="se:name.publication.book">Agricola</i> 45, <i xml:lang="la">ille vultus et rubor quo se contra pudorem muniebat</i>; and in general, Seneca <i epub:type="se:name.publication.book">Epistles</i> 11.3. Doubtless Domitian’s ruddy complexion was a recommendation in his youth. <a href="book-8.xhtml#noteref-960" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-961" epub:type="endnote">
-					<p><i epub:type="se:name.publication.book">Iliad</i>, 21.108. <a href="book-8.xhtml#noteref-961" epub:type="backlink">↩</a></p>
+					<p><i epub:type="se:name.publication.poem">Iliad</i>, 21.108. <a href="book-8.xhtml#noteref-961" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-962" epub:type="endnote">
 					<p><abbr>Cf.</abbr> <a href="book-8.xhtml#book-8-2-5-2">Titus, 5.2</a>. The bow and arrow were not included by the Romans in the term <i xml:lang="la">arma</i>. <a href="book-8.xhtml#noteref-962" epub:type="backlink">↩</a></p>
