--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -16,8 +16,8 @@
 			<a href="https://en.wikipedia.org/wiki/Suetonius">Suetonius</a>.<br/>
 			It was translated from Latin in 1913 by<br/>
 			<a href="https://en.wikipedia.org/wiki/John_Carew_Rolfe">John Carew Rolfe</a>.</p>
-			<p>This ebook was produced for the<br/>
-			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
+			<p>This ebook was produced for<br/>
+			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://rightword.com.au/david.php">David Grigg</a>,<br/>
 			and is based on a transcription produced by<br/>
