--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -115,7 +115,7 @@
 					<p>In token of his restoration to the rank of knight, which he forfeited by appearing on the stage; see <a href="book-1.xhtml#book-1-35">Julius, 33</a>. <a href="book-1.xhtml#noteref-35" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-36" epub:type="endnote">
-					<p>The first fourteen rows above the orchestra, reserved for the knights by the law of <abbr class="name">L.</abbr> Roscius Otho, tribune of the commons, 67 <abbr class="era">BC</abbr>. <a href="book-1.xhtml#noteref-36" epub:type="backlink">↩</a></p>
+					<p>The first fourteen rows above the orchestra, reserved for the knights by the law of <abbr epub:type="z3998:given-name">L.</abbr> Roscius Otho, tribune of the commons, 67 <abbr class="era">BC</abbr>. <a href="book-1.xhtml#noteref-36" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-37" epub:type="endnote">
 					<p><i xml:lang="la">Euripus</i>, the strait between Euboea and Boeotia, was used also as a common noun, meaning “a ditch” or “canal.” <a href="book-1.xhtml#noteref-37" epub:type="backlink">↩</a></p>
@@ -1090,7 +1090,7 @@
 					<p>Of Augustus; see <a href="book-2.xhtml#book-2-100-4">Augustus, 100.4</a>. <a href="book-4.xhtml#noteref-360" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-361" epub:type="endnote">
-					<p>Originally the title of the commander of the knights who were under forty-five and in active service. Conferred on <abbr class="name">C.</abbr> and <abbr class="name">L.</abbr> Caesar by Augustus, it became the designation of the heir to the throne, and was later assumed by the emperors themselves. <a href="book-4.xhtml#noteref-361" epub:type="backlink">↩</a></p>
+					<p>Originally the title of the commander of the knights who were under forty-five and in active service. Conferred on <abbr epub:type="z3998:given-name">C.</abbr> and <abbr epub:type="z3998:given-name">L.</abbr> Caesar by Augustus, it became the designation of the heir to the throne, and was later assumed by the emperors themselves. <a href="book-4.xhtml#noteref-361" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-362" epub:type="endnote">
 					<p>The consuls in making propositions to the senate began with a set formula (<abbr>cf.</abbr> <a href="book-2.xhtml#book-2-58-2">Augustus, 58.2</a>, <a href="book-1.xhtml#book-1-80-2">Julius, 80.2</a>), wishing success to the emperor, or in earlier days to the State. <a href="book-4.xhtml#noteref-362" epub:type="backlink">↩</a></p>
@@ -1399,7 +1399,7 @@
 					<p>The <i xml:lang="la">spolia opima</i> were the armour of the leader of the enemy, taken from him in hand-to-hand combat by a Roman general. <a href="book-5.xhtml#noteref-463" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-464" epub:type="endnote">
-					<p><abbr class="name">C.</abbr> and <abbr class="name">L.</abbr> Caesar: see <a href="book-3.xhtml#book-3-23">Tiberius, 23</a>. <a href="book-5.xhtml#noteref-464" epub:type="backlink">↩</a></p>
+					<p><abbr epub:type="z3998:given-name">C.</abbr> and <abbr epub:type="z3998:given-name">L.</abbr> Caesar: see <a href="book-3.xhtml#book-3-23">Tiberius, 23</a>. <a href="book-5.xhtml#noteref-464" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-465" epub:type="endnote">
 					<p>That is, on the anniversary of the dedication, which was in 12 <abbr class="era">BC</abbr> <a href="book-5.xhtml#noteref-465" epub:type="backlink">↩</a></p>
@@ -1720,7 +1720,7 @@
 					<p>See <a href="book-1.xhtml#book-1-34">Julius, 34.1</a>. <a href="book-6.xhtml#noteref-570" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-571" epub:type="endnote">
-					<p>Proposed by <abbr class="name">Q.</abbr> Pedius, Caesar’s colleague in the consulship. <a href="book-6.xhtml#noteref-571" epub:type="backlink">↩</a></p>
+					<p>Proposed by <abbr epub:type="z3998:given-name">Q.</abbr> Pedius, Caesar’s colleague in the consulship. <a href="book-6.xhtml#noteref-571" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-572" epub:type="endnote">
 					<p>The Pedian law. <a href="book-6.xhtml#noteref-572" epub:type="backlink">↩</a></p>
@@ -2230,7 +2230,7 @@
 					<p><abbr>Cf.</abbr> <a href="book-6.xhtml#book-6-11-2">Nero, 11.2</a>. <a href="book-7.xhtml#noteref-740" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-741" epub:type="endnote">
-					<p>That is to say, entering office on January 1, and with his colleague, <abbr class="name">L.</abbr> Cornelius Sulla, giving his name to the year. <a href="book-7.xhtml#noteref-741" epub:type="backlink">↩</a></p>
+					<p>That is to say, entering office on January 1, and with his colleague, <abbr epub:type="z3998:given-name">L.</abbr> Cornelius Sulla, giving his name to the year. <a href="book-7.xhtml#noteref-741" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-742" epub:type="endnote">
 					<p>Either Suetonius is in error or the manuscripts; the name should be Gnaeus. <a href="book-7.xhtml#noteref-742" epub:type="backlink">↩</a></p>
@@ -2800,7 +2800,7 @@
 					<p>Probably referring to new senators, entering the House for the first time. <a href="book-8.xhtml#noteref-930" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-931" epub:type="endnote">
-					<p>Nothing is known of this law. Livy, 21.63.3⁠–⁠4 mentions a law of <abbr class="name">Q.</abbr> Claudius, which forbade senators to engage in business, and that law may have had a chapter referring to the <i xml:lang="la">scribae quaestorii</i> and other “civil servants;” or, as some suppose, Publius Clodius may have passed such a law. <a href="book-8.xhtml#noteref-931" epub:type="backlink">↩</a></p>
+					<p>Nothing is known of this law. Livy, 21.63.3⁠–⁠4 mentions a law of <abbr epub:type="z3998:given-name">Q.</abbr> Claudius, which forbade senators to engage in business, and that law may have had a chapter referring to the <i xml:lang="la">scribae quaestorii</i> and other “civil servants;” or, as some suppose, Publius Clodius may have passed such a law. <a href="book-8.xhtml#noteref-931" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-932" epub:type="endnote">
 					<p>That is, charges which resulted in the confiscation of the goods of the accused to the privy purse. <a href="book-8.xhtml#noteref-932" epub:type="backlink">↩</a></p>
@@ -2902,7 +2902,7 @@
 					<p>The great library of Ptolemy Philadelphus at Alexandria was destroyed during Caesar’s Alexandrine war. The Pergamene library was given by Antony to Cleopatra and transferred to Alexandria, where it was kept in the temple of Serapis. It was frequently damaged during civil disturbances. Burman thinks that the reference is to the latter; but the plural suggests both. <a href="book-8.xhtml#noteref-964" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-965" epub:type="endnote">
-					<p>Named after <abbr class="name">C.</abbr> Matius, a friend of Augustus and a writer on cookery and gardening. <a href="book-8.xhtml#noteref-965" epub:type="backlink">↩</a></p>
+					<p>Named after <abbr epub:type="z3998:given-name">C.</abbr> Matius, a friend of Augustus and a writer on cookery and gardening. <a href="book-8.xhtml#noteref-965" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-966" epub:type="endnote">
 					<p><abbr>Cf.</abbr> <i epub:type="se:name.publication.book">Juvenal</i> <span epub:type="z3998:roman">II</span>.32 f. <a href="book-8.xhtml#noteref-966" epub:type="backlink">↩</a></p>
